added created_at and updated_at to ChessGame in DB
